--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.bodycontent{
+  position: fixed;
+  top:30%;
+  width:200px;
+  height:90%;
+  text-align:center;
+  margin-top: -50px;
+  margin-left: -100px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
